adding d3 for tool stack

--- a/index.html
+++ b/index.html
@@ -212,6 +212,11 @@
           </div>
         </section>
         <!-- #skills -->
+        <section id="svg-graph">
+          <div id="svg-tools">
+
+          </div>
+        </section>
 
         <section id="portfolio" class="section section-portfolio">
           <div class="animate-up">
@@ -443,6 +448,9 @@
   <script type="text/javascript" src="js/plugins/jquery.owlcarousel/owl.carousel.min.js"></script>
   <script type="text/javascript" src="js/options.js"></script>
   <script type="text/javascript" src="js/site.min.js"></script>
+  <script type="text/javascript" src="js/libs/d3.min.js"></script>
+  <script type="text/javascript" src="scripts/app.min.js"></script>
+
 </body>
 
 </html>
