--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <link rel="stylesheet" type="text/css" href="js/plugins/jquery.owlcarousel/owl.carousel.css">
   <link rel="stylesheet" type="text/css" href="js/plugins/jquery.owlcarousel/owl.theme.css">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
   <link rel="stylesheet" type="text/css" href="colors/green.css">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -138,7 +139,7 @@
                         <strong class="title">E-mail</strong>
                         <span class="cont"><a href="mailto:qczhang18@gmail.com">qczhang18@gmail.com</a></span>
                       </li>
-                     
+
                     </ul>
                   </div>
                 </div>
@@ -160,7 +161,7 @@
 
               <p>Hello! My name is Q. Zhang. I am a Full-Stack Web Developer specializing in frontend and backend development.
                 Experienced with all stages of the development cycle for dynamic web projects. Well-versed in numerous programming
-                languages including JavaScript, Typescript, HTML5, CSS, Sinatra, Ruby, Ruby on Rails, AngularJS, NodeJS,
+                languages/frameworks including JavaScript, Typescript, HTML5, CSS, Sinatra, Ruby, Ruby on Rails, ReactJS, NodeJS
                 with strong background in project management and customer relations.</p>
             </div>
           </div>
@@ -174,49 +175,15 @@
             <div class="section-box">
               <div class="row">
                 <div class="row gallery">
-                  <div class="col-sm-2 col-xs-6 animate-up animated "><img src="images/brands/mysql.png" alt="mysql" class="img-responsive img-raised img-circle" data-toggle="tooltip"
-                      data-placement="top" title="" data-original-title="MySQL"></div>
-                  <div class="col-sm-2 col-xs-6 animate-up animated "><img src="images/brands/angular.png" alt="angular" class="img-responsive img-raised img-circle" data-toggle="tooltip"
-                      data-placement="top" title="" data-original-title="Angular 1"></div>
-                  <div class="col-sm-2 col-xs-6"><img src="images/brands/github.png" alt="github" class="img-responsive img-raised img-circle" data-toggle="tooltip"
-                      data-placement="top" title="" data-original-title="Github"></div>
-                  <div class="col-sm-2 col-xs-6"><img src="images/brands/npm.png" alt="npm" class="img-responsive img-raised img-circle" data-toggle="tooltip"
-                      data-placement="top" title="" data-original-title="NPM"></div>
-                  <div class="col-sm-2 col-xs-6"><img src="images/brands/css.png" alt="css" class="img-responsive img-raised img-circle" data-toggle="tooltip"
-                      data-placement="top" title="" data-original-title="CSS3"></div>
-                  <div class="col-sm-2 col-xs-6"><img src="images/brands/bitbucket.png" alt="bitbucket" class="img-responsive img-raised img-circle" data-toggle="tooltip"
-                      data-placement="top" title="" data-original-title="Bitbucket"></div>
-                  <div class="col-sm-2 col-xs-6"><img src="images/brands/html.png" alt="html" class="img-responsive img-raised img-circle" data-toggle="tooltip"
-                      data-placement="top" title="" data-original-title="HTML 5"></div>
-                  <div class="col-sm-2 col-xs-6"><img src="images/brands/jquery.png" alt="jquery" class="img-responsive img-raised img-circle" data-toggle="tooltip"
-                      data-placement="top" title="" data-original-title="jQuery and jQuery UI"></div>
-                  <div class="col-sm-2 col-xs-6"><img src="images/brands/sass.png" alt="sass" class="img-responsive img-raised img-circle" data-toggle="tooltip"
-                      data-placement="top" title="" data-original-title="SASS"></div>
-                  <div class="col-sm-2 col-xs-6"><img src="images/brands/js.png" alt="js" class="img-responsive img-raised img-circle" data-toggle="tooltip"
-                      data-placement="top" title="" data-original-title="Javascript"></div>
-                  <div class="col-sm-2 col-xs-6"><img src="images/brands/postgresql.png" alt="postgresql" class="img-responsive img-raised img-circle" data-toggle="tooltip"
-                      data-placement="top" title="" data-original-title="PostgreSQL"></div>
-                  <div class="col-sm-2 col-xs-6"><img src="images/brands/visual.png" alt="visual" class="img-responsive img-raised img-circle" data-toggle="tooltip"
-                      data-placement="top" title="" data-original-title="Visual Studio, C# and Team Foundation Server"></div>
-                  <div class="col-sm-2 col-xs-6"><img src="images/brands/bootstrap.png" alt="bootstrap" class="img-responsive img-raised img-circle" data-toggle="tooltip"
-                      data-placement="top" title="" data-original-title="Bootstrap 3"></div>
-                  <div class="col-sm-2 col-xs-6"><img src="images/brands/gitlab.png" alt="gitlab" class="img-responsive img-raised img-circle" data-toggle="tooltip"
-                      data-placement="top" title="" data-original-title="Gitlab"></div>
-                  <div class="col-sm-2 col-xs-6"><img src="images/brands/ruby.png" alt="ruby" class="img-responsive img-raised img-circle" data-toggle="tooltip"
-                      data-placement="top" title="" data-original-title="Ruby"></div>
-                  <div class="col-sm-2 col-xs-6"><img src="images/brands/rails.png" alt="rails" class="img-responsive img-raised img-circle" data-toggle="tooltip"
-                      data-placement="top" title="" data-original-title="Rails"></div>
+                  <div id="svg-tools">
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </section>
         <!-- #skills -->
-        <section id="svg-graph">
-          <div id="svg-tools">
 
-          </div>
-        </section>
 
         <section id="portfolio" class="section section-portfolio">
           <div class="animate-up">
