remove more extra

--- a/index.html
+++ b/index.html
@@ -211,34 +211,31 @@
                     <img src="img/uploads/portfolio/portfolio-thumb-05-610x600.jpg" alt="" />
                     <figcaption class="portfolio-caption">
                       <div class="portfolio-caption-inner">
-                        <h3 class="portfolio-title">Street Photography</h3>
-                        <h4 class="portfolio-cat">Photography</h4>
+                        <h3 class="portfolio-title">qBlog</h3>
+                        <h4 class="portfolio-cat">Not a typical blogging app.
+                        <p> Build With:</p>
+                        <ul>
+                          <li> HTML/CSS </li>
+                          <li> jQuery </li>
+                          <li>Ruby on Rails </li>
+                          <li> Material Design </li>
+                          <li> ActionCable </li>
+                          <li> Behaviour Driven Development with RSpec, Capybara</li>
+                          <li> Continuous Delivery with Codeship </li>
+                        </ul>
+                        <br>
+                        <a href = "https://github.com/qczhang18/qczhang18blog"> Github Repo </a>
+
+                        </h4>
 
                         <div class="btn-group">
                           <a class="btn-link" href="http://qczhang18-qblog.herokuapp.com/" target="_blank"><i
                                                 class="rsicon rsicon-link"></i></a>
-                          <a class="portfolioFancybox btn-zoom" data-fancybox-group="portfolioFancybox1" href="#portfolio1-inline1"><i class="rsicon rsicon-eye"></i></a>
                         </div>
                       </div>
                     </figcaption>
                   </figure>
 
-                  <!-- Start: Portfolio Inline Boxes -->
-                  <div id="portfolio1-inline1" class="fancybox-inline-box">
-                    <div class="inline-embed" data-embed-type="image" data-embed-url="img/uploads/portfolio/portfolio-thumb-05-large.jpg"></div>
-                    <div class="inline-cont">
-                      <h2 class="inline-title">Not a typical blogging app. Realtime update feature with ActionCable and Material Design
-                      </h2>
-
-                      <div class="inline-text">
-                        <p>Behaviour Driven with RSpec, Capybara, Continuous Delivery with Codeship</p>
-                        <img src="https://app.codeship.com/projects/8e3846a0-f312-0134-1a26-0a07c77144fa/status?branch=master"> </img>
-
-                        <a href = "https://github.com/qczhang18/qczhang18blog"> Github Repo </a>
-                      </div>
-                    </div>
-                  </div>
-                  <!-- End: Portfolio Inline Boxes -->
                 </div>
               </div>
               <!-- .grid-item -->
@@ -246,15 +243,15 @@
               <div class="grid-item size11 bridge">
                 <div class="grid-box">
                   <figure class="portfolio-figure">
-                    <img src="img/uploads/portfolio/portfolio-thumb-11-289x281.jpg" alt="" />
+                    <img src="img/meditate.jpg" alt="" />
                     <figcaption class="portfolio-caption">
                       <div class="portfolio-caption-inner">
-                        <h3 class="portfolio-title">More Coming Soon</h3>
-                        <h4 class="portfolio-cat">soon...</h4>
+                        <h3 class="portfolio-title">More Coming Soon...</h3>
+                        <!-- <h4 class="portfolio-cat">soon...</h4> -->
                       </div>
                     </figcaption>
                   </figure>
-                  
+
                 </div>
               </div>
               <!-- .grid-item -->
@@ -273,9 +270,9 @@
     <footer class="footer">
       <div class="footer-social">
         <ul class="social">
-          <li><a class="ripple-centered" href="" target="_blank"><i class="rsicon rsicon-twitter"></i></a></li>
-          <li><a class="ripple-centered" href="" target="_blank"><i class="rsicon rsicon-linkedin"></i></a></li>
-          <li><a class="ripple-centered" href="" target="_blank"><i class="rsicon rsicon-github"></i></a></li>
+          <li><a class="ripple-centered" href="https://www.twitter.com/qczhang18" target="_blank"><i class="rsicon rsicon-twitter"></i></a></li>
+          <li><a class="ripple-centered" href="https://www.linkedin.com/in/qczhang18/" target="_blank"><i class="rsicon rsicon-linkedin"></i></a></li>
+          <li><a class="ripple-centered" href="https://github.com/qczhang18" target="_blank"><i class="rsicon rsicon-github"></i></a></li>
         </ul>
       </div>
     </footer>
