--- a/index.html
+++ b/index.html
@@ -212,27 +212,47 @@
                     <figcaption class="portfolio-caption">
                       <div class="portfolio-caption-inner">
                         <h3 class="portfolio-title">qBlog</h3>
-                        <h4 class="portfolio-cat">Not a typical blogging app.
-                        <p> Build With:</p>
+                        <h3 class="portfolio-cat">Niche Platform for People who Practice Meditation to Share, Blog and Comments About Their Experience
+                        <br />
+                        <br/>
+                        <p> Realtime Chatting Build with:</p>
                         <ul>
                           <li> HTML/CSS </li>
+                          <Li> Javascript </li>
                           <li> jQuery </li>
-                          <li>Ruby on Rails </li>
+                          <li> Ruby on Rails </li>
                           <li> Material Design </li>
                           <li> ActionCable </li>
                           <li> Behaviour Driven Development with RSpec, Capybara</li>
                           <li> Continuous Delivery with Codeship </li>
+                          <li> Login with two users in different browsers or incognito mode as below for demo </li>
                         </ul>
-                        <br>
-                        <a href = "https://github.com/qczhang18/qczhang18blog"> Github Repo </a>
 
-                        </h4>
+                      <div class="row">
+                          <div class="col-xs-5">
+                            email:      <span style="color:red">alpha@demo.com</span>
+                            <br />
+                            password:   <span style="color:red">password</span>
+                          </div>
+                          <div class="col-xs-5">
+                            email:      <span style="color:red">beta@demo.com</span>
+                            <br />
+                            password:   <span style="color:red">password</span>
+                          </div>
+                      </div>
+                    </h3>
+                      <div >
+                        <div class="btn">
+                          <a href="https://github.com/qczhang18/qczhang18blog" target="_blank"><i
+                                                class="rsicon rsicon-eye"></i>Github Repo</a>
+                        </div>
 
-                        <div class="btn-group">
-                          <a class="btn-link" href="http://qczhang18-qblog.herokuapp.com/" target="_blank"><i
-                                                class="rsicon rsicon-link"></i></a>
+                        <div class="btn">
+                          <a href="http://qczhang18-qblog.herokuapp.com/" target="_blank"><i
+                                                class="rsicon rsicon-link"></i>Live Site</a>
                         </div>
                       </div>
+                    </div>
                     </figcaption>
                   </figure>
 
