--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
               <div class="grid-item size22 photography">
                 <div class="grid-box">
                   <figure class="portfolio-figure">
-                    <img src="img/uploads/portfolio/portfolio-thumb-05-610x600.jpg" alt="" />
+                    <img src="img/qblog.png" alt="" />
                     <figcaption class="portfolio-caption">
                       <div class="portfolio-caption-inner">
                         <h3 class="portfolio-title">qBlog</h3>
@@ -225,7 +225,7 @@
                           <li> ActionCable </li>
                           <li> Behaviour Driven Development with RSpec, Capybara</li>
                           <li> Continuous Delivery with Codeship </li>
-                          <li> Login with two users in different browsers or incognito mode as below for demo </li>
+                          <li> Login with two users in different browsers or incognito mode as below for realtime broadcast feature </li>
                         </ul>
 
                       <div class="row">
